# chesslib

./: .clang-tidy  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  flake.nix  vcpkg.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-config.cmake  install-config.cmake.in  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/chesslib/: chesslib.hpp
include/chesslib/board/: board.hpp  encoding.hpp  iterator.hpp  move_codec.hpp  move_generator.hpp
include/chesslib/core/: scope_exit.hpp  types.hpp  zobrist.hpp
include/chesslib/eval/: evaluation.hpp  piece_square_tables.hpp
include/chesslib/random/: romu.hpp
include/chesslib/util/: fen.hpp  perft.hpp  san.hpp  san_replay.hpp  uci.hpp
source/: board.cpp  zobrist.cpp
source/eval/: evaluation.cpp
source/perft/: perft.cpp
source/util/: fen.cpp  perft.cpp  san.cpp  san_replay.cpp  uci.cpp
spec/: chesslib.md
test/: CMakeLists.txt
test/package-install/: CMakeLists.txt  main.cpp
test/source/: bench.cpp  chesslib_test.cpp  eval.cpp  fen.cpp  perft.cpp
